<resources>
    <string name="app_name">health</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="user">账户</string>
    <string name="title_login">用户登录</string>
    <string name="title_check">手机验证</string>
    <string name="title_register">新用户注册</string>
    <string name="title_personal_center">个人中心</string>
    <string name="title_quit">退出</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_modifi_pwd">修改密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入8~16位非全数字密码</string>
    <string name="input_addr">请输入地址</string>
    <string name="input_age">请输入年龄</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入8~16位非全数字新密码</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="find_psw">找回密码</string>
    <string name="go_register">马上注册</string>

    <string name="input_authcode">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="psw_again">请再次输入密码</string>
    <string name="next">下一步</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="input_space_phone"> 手机号</string>
    <string name="input_space_pwd"> 密码</string>
    <string name="check">验&#160;&#160;证</string>
    <string name="register">注&#160;&#160;册</string>
    <string name="finish">完&#160;&#160;成</string>


    <string name="check_anthcode_error">验证码输入错误</string>
    <string name="check_mobileNo_format_error">手机号格式错误</string>
    <string name="check_authcode_correct">验证成功</string>

    <string name="reset_check_nullphone">传入的手机号为空</string>
    <string name="reset_check_nullverificationcode">传入的重置密码为空</string>
    <string name="reset_check_submitfailed">提交失败</string>
    <string name="reset_check_illegalip">当前访问的IP非法</string>
    <string name="reset_check_blackphone">当前号码已被列入黑名单</string>
    <string name="reset_check_illegalphone">当前输入的号码非法</string>
    <string name="reset_check_nothisuser">当前手机没有被注册</string>
    <string name="reset_check_sendcodeok">验证码发送成功</string>
    <string name="reset_check_nodata">当前没有数据输入</string>

    <string name="reset_nullphone">传入的手机号为空</string>
    <string name="reset_nullresetpasswd">传入的重置密码为空</string>
    <string name="reset_submitfailed">提交失败</string>
    <string name="reset_illegalip">当前访问的IP非法</string>
    <string name="reset_blackphone">当前号码已被列入黑名单</string>
    <string name="reset_passwdok">已设置为新密码</string>
    <string name="reset_passwderror">发送失败，请重新重置密码</string>


    <string name="register_check_nullphone">传入的手机号为空</string>
    <string name="register_check_nullverificationcode">传入的验证码为空</string>
    <string name="register_check_submitfailed">提交失败</string>
    <string name="register_check_illegalip">访问的IP非法</string>
    <string name="register_check_blackphone">号码已被列入黑名单</string>
    <string name="register_check_illegalphone">输入的号码非法</string>
    <string name="register_check_alreadyreg">电话号码已被注册</string>
    <string name="register_check_sendcodeok">验证码发送成功</string>
    <string name="register_check_nodata">没有数据输入</string>


    <string name="register_nullphone">传入的手机号为空</string>
    <string name="register_nullname">传入的昵称为空</string>
    <string name="register_nullpassword">传入的密码为空</string>
    <string name="register_phoneexist">该电话已注册</string>
    <string name="register_nameexis">该昵称已被使用</string>
    <string name="register_havespace">密码中存在空格</string>
    <string name="register_nodata">没有数据输入</string>
    <string name="register_shortpassword">密码长度小于8</string>
    <string name="register_queryerror">系统错误</string>
    <string name="register_registerok">注册成功</string>


    <string name="login_nullphone">手机号为空</string>
    <string name="login_nullpassword">密码为空</string>
    <string name="login_nouser">手机号或密码错误</string>
    <string name="login_queryerror">密码为空</string>
    <string name="login_loginok">登录成功</string>

    <string name="modifi_dif_input">两次输入密码不一致</string>

    <!--与成员相关的提示-->
    <string name="add_member">添加成员</string>
    <string name="input_member_name">请输入新成员姓名</string>
    <string name="input_member_age">请输入新成员年龄</string>
    <string name="next_step">下一步</string>
    <string name="age_format_error">年龄格式输入错误，请输入1~3位数字</string>
    <string name="no_check_gender">未选择性别</string>

    <string name="add_nullfamilyphone">手机号为空</string>
    <string name="add_nullmembername">传入的成员姓名为空</string>
    <string name="add_nullage">年龄为空</string>
    <string name="add_nullgender">性别为空</string>
    <string name="add_addmemberok">添加成员成功</string>
    <string name="add_memberexist">成员已存在</string>


    <string name="update_member_success">修改成功</string>
    <string name="upload_member_image_ok">头像上传成功</string>

    <string name="serverbreak">服务器无响应</string>


    <item name="tag_frist" type="id"></item>
    <item name="tag_second" type="id"></item>


    <!--连接血压计时的错误提示-->
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
</resources>
