<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/reg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_marginLeft="15dp">

        <com.wmct.ui.ClearEditText
            android:id="@+id/input_phone_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"/>
        <com.wmct.ui.ClearEditText
            android:id="@+id/input_code_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_authcode"
            android:layout_below="@id/input_phone_number"
            android:inputType="phone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/bt_get_authcode"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/input_code_number"
            android:layout_alignBaseline="@id/input_code_number"
            android:text="@string/get_auth_code"
            android:textSize="15sp"
            android:textColor="@color/paleturquoise"
            android:background="@drawable/background_bt"/>
        <Button
            android:id="@+id/bt_register"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_below="@id/input_code_number"
            android:layout_centerHorizontal="true"
            android:text="@string/check"
            android:textSize="20sp"
            android:textColor="@color/paleturquoise"
            android:background="@drawable/background_bt"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/check_phone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/title_check"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_above="@id/reg_layout"
        android:textColor="@color/aquamarine_blue"/>


</RelativeLayout>