<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:background="@drawable/background_login">

    <RelativeLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5">

        <TextView
            android:id="@+id/tx_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:text="×"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user"
            android:textSize="30sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <com.wmct.ui.ClearEditText
            android:id="@+id/et_phone"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/background_et"
            android:hint="@string/input_space_phone"

            />

        <com.wmct.ui.ClearEditText
            android:id="@+id/et_pwd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_et"
            android:hint="@string/input_space_pwd"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="190dp"
                android:text="@string/go_register"
                android:textColor="@color/blue"

                />


            <TextView
                android:id="@+id/tx_Reset_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_psw"
                android:textColor="@color/blue" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_bt"
            android:text="登     录"
            android:textSize="30sp" />

    </LinearLayout>


</RelativeLayout>
